Rearrange buttons on 'Set my location' block. Fix throbber flicker

--- a/css/ip_geoloc_all.css
+++ b/css/ip_geoloc_all.css
@@ -29,10 +29,12 @@ span.geofield-proximity-origin-from,
 #block-ip-geoloc-geocode-address > div,
 #block-ip-geoloc-geocode-address > h2,
 form#ip-geoloc-geocode-address > div .form-item,
-#edit-fixed-address {
+#set-location-form .form-radios {
   display: inline-table;
 }
-#edit-fixed-address > .form-item-fixed-address {
+
+/* Note: #ids don't work well to target elements affected by AJAX */
+#set-location-form .form-radios > .form-item-fixed-address {
   padding-left: 2px;
   padding-right: 6px;
 }
@@ -46,8 +48,10 @@ textarea#edit-street-address {
 /* Throbber from ctools module -- uncomment if you wish to use it over core's.
 #set-location-form .ajax-progress.ajax-progress-throbber {
   background: white;
+  color: #555;
+  border: 1px solid #ccc;
   display: inline-table;
-  min-width: 130px;
+  width: 99%;
 }
 #set-location-form .ajax-progress.ajax-progress-throbber .throbber {
   background: transparent url("../../ctools/images/throbber.gif") no-repeat center;
